updated travis yaml to execute test.sh x2

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
   - "3.6"
   - "3.6-dev"  # 3.6 development branch
   - "3.7-dev"  # 3.7 development branch
-jobs:
-  include:
-    - stage: test
-      script: bash scripts/test.sh
+install:
+  - pip install -U json
+script:
+  - bash scripts/test.sh
