updated CloudFormation templates and validation script

--- a/templates/ElasticBeanstalk_in_VPC.template
+++ b/templates/ElasticBeanstalk_in_VPC.template
@@ -1,4 +1,3 @@
-
 {
   "AWSTemplateFormatVersion" : "2010-09-09",
 
@@ -10,8 +9,8 @@
       "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the bastion host",
       "Type": "AWS::EC2::KeyPair::KeyName",
       "ConstraintDescription" : "must be the name of an existing EC2 KeyPair."
-    },
-
+    },  
+    
     "KeyName": {
       "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the Elastic Beanstalk hosts",
       "Type": "AWS::EC2::KeyPair::KeyName",
@@ -54,19 +53,19 @@
       "Private" : { "CIDR" : "10.0.1.0/24" }
     },
     "AWSInstanceType2Arch" : {
-      "t1.micro"    : { "Arch" : "PV64"   },
+      "t1.micro"    : { "Arch" : "HVM64"  },
       "t2.nano"     : { "Arch" : "HVM64"  },
       "t2.micro"    : { "Arch" : "HVM64"  },
       "t2.small"    : { "Arch" : "HVM64"  },
       "t2.medium"   : { "Arch" : "HVM64"  },
       "t2.large"    : { "Arch" : "HVM64"  },
-      "m1.small"    : { "Arch" : "PV64"   },
-      "m1.medium"   : { "Arch" : "PV64"   },
-      "m1.large"    : { "Arch" : "PV64"   },
-      "m1.xlarge"   : { "Arch" : "PV64"   },
-      "m2.xlarge"   : { "Arch" : "PV64"   },
-      "m2.2xlarge"  : { "Arch" : "PV64"   },
-      "m2.4xlarge"  : { "Arch" : "PV64"   },
+      "m1.small"    : { "Arch" : "HVM64"  },
+      "m1.medium"   : { "Arch" : "HVM64"  },
+      "m1.large"    : { "Arch" : "HVM64"  },
+      "m1.xlarge"   : { "Arch" : "HVM64"  },
+      "m2.xlarge"   : { "Arch" : "HVM64"  },
+      "m2.2xlarge"  : { "Arch" : "HVM64"  },
+      "m2.4xlarge"  : { "Arch" : "HVM64"  },
       "m3.medium"   : { "Arch" : "HVM64"  },
       "m3.large"    : { "Arch" : "HVM64"  },
       "m3.xlarge"   : { "Arch" : "HVM64"  },
@@ -76,8 +75,8 @@
       "m4.2xlarge"  : { "Arch" : "HVM64"  },
       "m4.4xlarge"  : { "Arch" : "HVM64"  },
       "m4.10xlarge" : { "Arch" : "HVM64"  },
-      "c1.medium"   : { "Arch" : "PV64"   },
-      "c1.xlarge"   : { "Arch" : "PV64"   },
+      "c1.medium"   : { "Arch" : "HVM64"  },
+      "c1.xlarge"   : { "Arch" : "HVM64"  },
       "c3.large"    : { "Arch" : "HVM64"  },
       "c3.xlarge"   : { "Arch" : "HVM64"  },
       "c3.2xlarge"  : { "Arch" : "HVM64"  },
@@ -110,19 +109,19 @@
     },
 
     "AWSInstanceType2NATArch" : {
-      "t1.micro"    : { "Arch" : "NATPV64"   },
+      "t1.micro"    : { "Arch" : "NATHVM64"  },
       "t2.nano"     : { "Arch" : "NATHVM64"  },
       "t2.micro"    : { "Arch" : "NATHVM64"  },
       "t2.small"    : { "Arch" : "NATHVM64"  },
       "t2.medium"   : { "Arch" : "NATHVM64"  },
       "t2.large"    : { "Arch" : "NATHVM64"  },
-      "m1.small"    : { "Arch" : "NATPV64"   },
-      "m1.medium"   : { "Arch" : "NATPV64"   },
-      "m1.large"    : { "Arch" : "NATPV64"   },
-      "m1.xlarge"   : { "Arch" : "NATPV64"   },
-      "m2.xlarge"   : { "Arch" : "NATPV64"   },
-      "m2.2xlarge"  : { "Arch" : "NATPV64"   },
-      "m2.4xlarge"  : { "Arch" : "NATPV64"   },
+      "m1.small"    : { "Arch" : "NATHVM64"  },
+      "m1.medium"   : { "Arch" : "NATHVM64"  },
+      "m1.large"    : { "Arch" : "NATHVM64"  },
+      "m1.xlarge"   : { "Arch" : "NATHVM64"  },
+      "m2.xlarge"   : { "Arch" : "NATHVM64"  },
+      "m2.2xlarge"  : { "Arch" : "NATHVM64"  },
+      "m2.4xlarge"  : { "Arch" : "NATHVM64"  },
       "m3.medium"   : { "Arch" : "NATHVM64"  },
       "m3.large"    : { "Arch" : "NATHVM64"  },
       "m3.xlarge"   : { "Arch" : "NATHVM64"  },
@@ -132,8 +131,8 @@
       "m4.2xlarge"  : { "Arch" : "NATHVM64"  },
       "m4.4xlarge"  : { "Arch" : "NATHVM64"  },
       "m4.10xlarge" : { "Arch" : "NATHVM64"  },
-      "c1.medium"   : { "Arch" : "NATPV64"   },
-      "c1.xlarge"   : { "Arch" : "NATPV64"   },
+      "c1.medium"   : { "Arch" : "NATHVM64"  },
+      "c1.xlarge"   : { "Arch" : "NATHVM64"  },
       "c3.large"    : { "Arch" : "NATHVM64"  },
       "c3.xlarge"   : { "Arch" : "NATHVM64"  },
       "c3.2xlarge"  : { "Arch" : "NATHVM64"  },
@@ -166,45 +165,47 @@
     }
 ,
     "AWSRegionArch2AMI" : {
-      "us-east-1"        : {"PV64" : "ami-2a69aa47", "HVM64" : "ami-97785bed", "HVMG2" : "ami-0a6e3770"},
-      "us-west-2"        : {"PV64" : "ami-7f77b31f", "HVM64" : "ami-f2d3638a", "HVMG2" : "ami-ee15a196"},
-      "us-west-1"        : {"PV64" : "ami-a2490dc2", "HVM64" : "ami-824c4ee2", "HVMG2" : "ami-0da4a46d"},
-      "eu-west-1"        : {"PV64" : "ami-4cdd453f", "HVM64" : "ami-d834aba1", "HVMG2" : "ami-af8013d6"},
-      "eu-west-2"        : {"PV64" : "NOT_SUPPORTED", "HVM64" : "ami-403e2524", "HVMG2" : "NOT_SUPPORTED"},
-      "eu-west-3"        : {"PV64" : "NOT_SUPPORTED", "HVM64" : "ami-8ee056f3", "HVMG2" : "NOT_SUPPORTED"},
-      "eu-central-1"     : {"PV64" : "ami-6527cf0a", "HVM64" : "ami-5652ce39", "HVMG2" : "ami-1d58ca72"},
-      "ap-northeast-1"   : {"PV64" : "ami-3e42b65f", "HVM64" : "ami-ceafcba8", "HVMG2" : "ami-edfd658b"},
-      "ap-northeast-2"   : {"PV64" : "NOT_SUPPORTED", "HVM64" : "ami-863090e8", "HVMG2" : "NOT_SUPPORTED"},
-      "ap-northeast-3"   : {"PV64" : "NOT_SUPPORTED", "HVM64" : "ami-83444afe", "HVMG2" : "NOT_SUPPORTED"},
-      "ap-southeast-1"   : {"PV64" : "ami-df9e4cbc", "HVM64" : "ami-68097514", "HVMG2" : "ami-c06013bc"},
-      "ap-southeast-2"   : {"PV64" : "ami-63351d00", "HVM64" : "ami-942dd1f6", "HVMG2" : "ami-85ef12e7"},
-      "ap-south-1"       : {"PV64" : "NOT_SUPPORTED", "HVM64" : "ami-531a4c3c", "HVMG2" : "ami-411e492e"},
-      "us-east-2"        : {"PV64" : "NOT_SUPPORTED", "HVM64" : "ami-f63b1193", "HVMG2" : "NOT_SUPPORTED"},
-      "ca-central-1"     : {"PV64" : "NOT_SUPPORTED", "HVM64" : "ami-a954d1cd", "HVMG2" : "NOT_SUPPORTED"},
-      "sa-east-1"        : {"PV64" : "ami-1ad34676", "HVM64" : "ami-84175ae8", "HVMG2" : "NOT_SUPPORTED"},
-      "cn-north-1"       : {"PV64" : "ami-77559f1a", "HVM64" : "ami-cb19c4a6", "HVMG2" : "NOT_SUPPORTED"},
-      "cn-northwest-1"   : {"PV64" : "ami-80707be2", "HVM64" : "ami-3e60745c", "HVMG2" : "NOT_SUPPORTED"}
+      "us-east-1"        : {"HVM64" : "ami-0080e4c5bc078760e", "HVMG2" : "ami-0aeb704d503081ea6"},
+      "us-west-2"        : {"HVM64" : "ami-01e24be29428c15b2", "HVMG2" : "ami-0fe84a5b4563d8f27"},
+      "us-west-1"        : {"HVM64" : "ami-0ec6517f6edbf8044", "HVMG2" : "ami-0a7fc72dc0e51aa77"},
+      "eu-west-1"        : {"HVM64" : "ami-08935252a36e25f85", "HVMG2" : "ami-0d5299b1c6112c3c7"},
+      "eu-west-2"        : {"HVM64" : "ami-01419b804382064e4", "HVMG2" : "NOT_SUPPORTED"},
+      "eu-west-3"        : {"HVM64" : "ami-0dd7e7ed60da8fb83", "HVMG2" : "NOT_SUPPORTED"},
+      "eu-central-1"     : {"HVM64" : "ami-0cfbf4f6db41068ac", "HVMG2" : "ami-0aa1822e3eb913a11"},
+      "eu-north-1"       : {"HVM64" : "ami-86fe70f8", "HVMG2" : "ami-32d55b4c"},
+      "ap-northeast-1"   : {"HVM64" : "ami-00a5245b4816c38e6", "HVMG2" : "ami-09d0e0e099ecabba2"},
+      "ap-northeast-2"   : {"HVM64" : "ami-00dc207f8ba6dc919", "HVMG2" : "NOT_SUPPORTED"},
+      "ap-northeast-3"   : {"HVM64" : "ami-0b65f69a5c11f3522", "HVMG2" : "NOT_SUPPORTED"},
+      "ap-southeast-1"   : {"HVM64" : "ami-05b3bcf7f311194b3", "HVMG2" : "ami-0e46ce0d6a87dc979"},
+      "ap-southeast-2"   : {"HVM64" : "ami-02fd0b06f06d93dfc", "HVMG2" : "ami-0c0ab057a101d8ff2"},
+      "ap-south-1"       : {"HVM64" : "ami-0ad42f4f66f6c1cc9", "HVMG2" : "ami-0244c1d42815af84a"},
+      "us-east-2"        : {"HVM64" : "ami-0cd3dfa4e37921605", "HVMG2" : "NOT_SUPPORTED"},
+      "ca-central-1"     : {"HVM64" : "ami-07423fb63ea0a0930", "HVMG2" : "NOT_SUPPORTED"},
+      "sa-east-1"        : {"HVM64" : "ami-05145e0b28ad8e0b2", "HVMG2" : "NOT_SUPPORTED"},
+      "cn-north-1"       : {"HVM64" : "ami-053617c9d818c1189", "HVMG2" : "NOT_SUPPORTED"},
+      "cn-northwest-1"   : {"HVM64" : "ami-0f7937761741dc640", "HVMG2" : "NOT_SUPPORTED"}
     }
 ,
     "AWSNATRegionArch2AMI" : {
-      "us-east-1"        : {"NATPV64" : "ami-c02b04a8", "NATHVM64" : "ami-4868ab25"},
-      "us-west-2"        : {"NATPV64" : "ami-2dae821d", "NATHVM64" : "ami-a275b1c2"},
-      "us-west-1"        : {"NATPV64" : "ami-67a54423", "NATHVM64" : "ami-004b0f60"},
-      "eu-west-1"        : {"NATPV64" : "ami-cb7de3bc", "NATHVM64" : "ami-a8dd45db"},
-      "eu-west-2"        : {"NATPV64" : "NOT_SUPPORTED", "NATHVM64" : "ami-6b4d470f"},
-      "eu-west-3"        : {"NATPV64" : "NOT_SUPPORTED", "NATHVM64" : "NOT_SUPPORTED"},
-      "eu-central-1"     : {"NATPV64" : "ami-3604392b", "NATHVM64" : "ami-5825cd37"},
-      "ap-northeast-1"   : {"NATPV64" : "ami-c7e016c7", "NATHVM64" : "ami-2443b745"},
-      "ap-northeast-2"   : {"NATPV64" : "NOT_SUPPORTED", "NATHVM64" : "ami-d14388bf"},
-      "ap-northeast-3"   : {"NATPV64" : "NOT_SUPPORTED", "NATHVM64" : "NOT_SUPPORTED"},
-      "ap-southeast-1"   : {"NATPV64" : "ami-b098a9e2", "NATHVM64" : "ami-a79b49c4"},
-      "ap-southeast-2"   : {"NATPV64" : "ami-0fed9d35", "NATHVM64" : "ami-53371f30"},
-      "ap-south-1"       : {"NATPV64" : "NOT_SUPPORTED", "NATHVM64" : "ami-e2b9d38d"},
-      "us-east-2"        : {"NATPV64" : "NOT_SUPPORTED", "NATHVM64" : "ami-92a6fef7"},
-      "ca-central-1"     : {"NATPV64" : "NOT_SUPPORTED", "NATHVM64" : "ami-32f14356"},
-      "sa-east-1"        : {"NATPV64" : "ami-93fb408e", "NATHVM64" : "ami-9336bcff"},
-      "cn-north-1"       : {"NATPV64" : "ami-bc3fad85", "NATHVM64" : "ami-7b549e16"},
-      "cn-northwest-1"   : {"NATPV64" : "NOT_SUPPORTED", "NATHVM64" : "ami-ae878dcc"}
+      "us-east-1"        : {"NATHVM64" : "ami-00a9d4a05375b2763"},
+      "us-west-2"        : {"NATHVM64" : "ami-0b840e8a1ce4cdf15"},
+      "us-west-1"        : {"NATHVM64" : "ami-097ad469381034fa2"},
+      "eu-west-1"        : {"NATHVM64" : "ami-024107e3e3217a248"},
+      "eu-west-2"        : {"NATHVM64" : "ami-0ca65a55561666293"},
+      "eu-west-3"        : {"NATHVM64" : "ami-0641e4dfc1427f114"},
+      "eu-central-1"     : {"NATHVM64" : "ami-06a5303d47fbd8c60"},
+      "eu-north-1"       : {"NATHVM64" : "ami-28d15f56"},
+      "ap-northeast-1"   : {"NATHVM64" : "ami-00d29e4cb217ae06b"},
+      "ap-northeast-2"   : {"NATHVM64" : "ami-0d98591cbf9ef1ffd"},
+      "ap-northeast-3"   : {"NATHVM64" : "ami-06d1fd472c1ce3d6b"},
+      "ap-southeast-1"   : {"NATHVM64" : "ami-01514bb1776d5c018"},
+      "ap-southeast-2"   : {"NATHVM64" : "ami-062c04ec46aecd204"},
+      "ap-south-1"       : {"NATHVM64" : "ami-00b3aa8a93dd09c13"},
+      "us-east-2"        : {"NATHVM64" : "ami-00d1f8201864cc10c"},
+      "ca-central-1"     : {"NATHVM64" : "ami-0b32354309da5bba5"},
+      "sa-east-1"        : {"NATHVM64" : "ami-057f5d52ff7ae75ae"},
+      "cn-north-1"       : {"NATHVM64" : "ami-070494c3f09a66136"},
+      "cn-northwest-1"   : {"NATHVM64" : "ami-0d5cda8ef7a8cc1fc"}
     }
 ,
     "Region2Principal" : {
@@ -225,7 +226,8 @@
       "sa-east-1"      : { "EC2Principal" : "ec2.amazonaws.com", "OpsWorksPrincipal" : "opsworks.amazonaws.com" },
       "cn-north-1"     : { "EC2Principal" : "ec2.amazonaws.com.cn", "OpsWorksPrincipal" : "opsworks.amazonaws.com.cn" },
       "cn-northwest-1" : { "EC2Principal" : "ec2.amazonaws.com.cn", "OpsWorksPrincipal" : "opsworks.amazonaws.com.cn" },
-      "eu-central-1"   : { "EC2Principal" : "ec2.amazonaws.com", "OpsWorksPrincipal" : "opsworks.amazonaws.com" }
+      "eu-central-1"   : { "EC2Principal" : "ec2.amazonaws.com", "OpsWorksPrincipal" : "opsworks.amazonaws.com" },
+      "eu-north-1"     : { "EC2Principal" : "ec2.amazonaws.com", "OpsWorksPrincipal" : "opsworks.amazonaws.com" }
     }
 
   },
@@ -605,7 +607,7 @@
       "Properties" : {
         "ApplicationName" : { "Ref" : "SampleApplication" },
          "Description" :  "AWS Elastic Beanstalk Environment running Python Sample Application",
-         "SolutionStackName" : "64bit Amazon Linux 2015.03 v2.0.1 running Python 2.7",
+         "SolutionStackName" : "64bit Amazon Linux 2018.03 v2.7.7 running Python 2.7",
          "VersionLabel" : { "Ref" : "SampleApplicationVersion" },
          "OptionSettings" : [
            {"Namespace" : "aws:autoscaling:launchconfiguration", "OptionName" : "SSHSourceRestriction", "Value" : { "Fn::Join" : [ "", ["tcp,22,22,", { "Ref" : "BastionSecurityGroup" }]]}},
