--- a/templates/OpsWorks.template
+++ b/templates/OpsWorks.template
@@ -1,4 +1,3 @@
-
 {
   "AWSTemplateFormatVersion": "2010-09-09",
 
@@ -23,7 +22,8 @@
       "sa-east-1"      : { "EC2Principal" : "ec2.amazonaws.com", "OpsWorksPrincipal" : "opsworks.amazonaws.com" },
       "cn-north-1"     : { "EC2Principal" : "ec2.amazonaws.com.cn", "OpsWorksPrincipal" : "opsworks.amazonaws.com.cn" },
       "cn-northwest-1" : { "EC2Principal" : "ec2.amazonaws.com.cn", "OpsWorksPrincipal" : "opsworks.amazonaws.com.cn" },
-      "eu-central-1"   : { "EC2Principal" : "ec2.amazonaws.com", "OpsWorksPrincipal" : "opsworks.amazonaws.com" }
+      "eu-central-1"   : { "EC2Principal" : "ec2.amazonaws.com", "OpsWorksPrincipal" : "opsworks.amazonaws.com" },
+      "eu-north-1"     : { "EC2Principal" : "ec2.amazonaws.com", "OpsWorksPrincipal" : "opsworks.amazonaws.com" }
     }
 
   },
@@ -37,7 +37,7 @@
           "Ref": "AWS::StackName"
         },
         "ServiceRoleArn": {
-          "Fn::GetAtt": [ "OpsWorksServiceRole", "Arn"]
+          "Fn::GetAtt": [ "OpsWorksServiceRole", "Arn"]            
         },
         "DefaultInstanceProfileArn": {
           "Fn::GetAtt": [ "OpsWorksInstanceProfile", "Arn"]
