set ci to run on paths

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,5 +1,8 @@
 name: Validate CloudFormation Templates
 on:
+  paths:
+    - 'templates/**'
+    - 'scripts/**'
   push:
     branches:
       - master
