run CI if workflow is amended

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
       - 'templates/**'
       - 'scripts/**'
       - 'requirements.txt'
+      - '.github/workflows/ci.yml'
     branches:
       - master
   pull_request:
@@ -12,6 +13,7 @@ on:
       - 'templates/**'
       - 'scripts/**'
       - 'requirements.txt'
+      - '.github/workflows/ci.yml'
     branches:
       - master
 
