--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -6,13 +6,13 @@ on:
     types:
       - completed
     branch:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
   tagging:
     runs-on: ubuntu-latest
-    if: ${{ contains(github.ref, 'master') }}
+    if: ${{ contains(github.ref, 'main') }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
