--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       - 'requirements.txt'
       - '.github/workflows/ci.yml'
     branches:
-      - master
+      - main
   pull_request:
     paths:
       - 'templates/**'
@@ -15,7 +15,7 @@ on:
       - 'requirements.txt'
       - '.github/workflows/ci.yml'
     branches:
-      - master
+      - main
 
 jobs:
   build:
