--- a/.github/workflows/tagging.yml
+++ b/.github/workflows/tagging.yml
@@ -15,18 +15,18 @@ jobs:
     if: ${{ contains(github.ref, 'main') }}
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set Tag Value
         run: |
           echo "DATE=v$(echo `date +'%Y.%m'`)" >> $GITHUB_ENV
       - name: Create tag
-        uses: actions/github-script@v4
+        uses: actions/github-script@v6
         with:
           github-token: ${{ github.token }}
           script: |
             let tagExists = [];
             try {
-              await github.git.createRef({
+              await github.rest.git.createRef({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 ref: "refs/tags/${{ env.DATE }}",
@@ -37,7 +37,7 @@ jobs:
               tagExists.push(e);
             }
             if (tagExists.length > 0) {
-              await github.git.updateRef({
+              await github.rest.git.updateRef({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 ref: "tags/${{ env.DATE }}",
