--- a/templates/S3_Website_With_CloudFront_Distribution.template
+++ b/templates/S3_Website_With_CloudFront_Distribution.template
@@ -20,8 +20,12 @@
       "ap-northeast-2" : { "Suffix": ".s3-website.ap-northeast-2.amazonaws.com" },
       "ap-northeast-3" : { "Suffix": ".s3-website.ap-northeast-3.amazonaws.com" },
       "ap-south-1"     : { "Suffix": ".s3-website.ap-south-1.amazonaws.com" },
+      "ap-south-2"     : { "Suffix": ".s3-website.ap-south-2.amazonaws.com" },
       "ap-southeast-1" : { "Suffix": ".s3-website-ap-southeast-1.amazonaws.com" },
       "ap-southeast-2" : { "Suffix": ".s3-website-ap-southeast-2.amazonaws.com" },
+      "ap-southeast-3" : { "Suffix": ".s3-website-ap-southeast-3.amazonaws.com" },
+      "ap-southeast-4" : { "Suffix": ".s3-website-ap-southeast-4.amazonaws.com" },
+      "il-central-1"   : { "Suffix": ".s3-website-il-central-1.amazonaws.com" },
       "ca-central-1"   : { "Suffix": ".s3-website.ca-central-1.amazonaws.com" },
       "cn-north-1"     : { "Suffix": ".s3-website.cn-north-1.amazonaws.com.cn" },
       "cn-northwest-1" : { "Suffix": ".s3-website.cn-northwest-1.amazonaws.com.cn" },
@@ -32,6 +36,9 @@
       "eu-west-2"      : { "Suffix": ".s3-website.eu-west-2.amazonaws.com" },
       "eu-west-3"      : { "Suffix": ".s3-website.eu-west-3.amazonaws.com" },
       "me-south-1"     : { "Suffix": ".s3-website.me-south-1.amazonaws.com" },
+      "me-central-1"   : { "Suffix": ".s3-website-me-central-1.amazonaws.com" },
+      "eu-south-2"     : { "Suffix": ".s3-website-eu-south-2.amazonaws.com" },
+      "eu-central-2"   : { "Suffix": ".s3-website-eu-central-2.amazonaws.com" },
       "sa-east-1"      : { "Suffix": ".s3-website-sa-east-1.amazonaws.com" },
       "us-east-1"      : { "Suffix": ".s3-website-us-east-1.amazonaws.com" },
       "us-east-2"      : { "Suffix": ".s3-website.us-east-2.amazonaws.com" },
